[package]
name = "restaurant_api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
bb8 = "0.8"
anyhow = "1.0.75"
diesel = { version = "2.1.3", features = ["chrono"] }
dotenvy = "0.15"
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-login = "0.7.0"
tower-cookies = "0.9.0"
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-sessions = "0.4.1"
password-auth = "1.0.0"
tower = "0.4.13"
time = "0.3.30"
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
md5 = "0.7.0"
chrono = { version = "0.4.31", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
uuid = "1.5.0"
